kubernetes/web-frontend/staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
