kubernetes/web-frontend/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  labels:
    service: web-frontend
spec:
  selector:
    app: web-frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
