kubernetes/web-frontend/web-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-frontend-to-rest-api
spec:
  podSelector:
    matchLabels:
      app: rest-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web-frontend
    ports:
    - protocol: TCP
      port: 5001
